syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "git.liero.se/opentelco/go-swpx/proto/resource";

package resource;

message Empty {}



message PollNetworkElementRequest {
  string version = 1;
}

// Responses in event queue
message PollNetworkElement {
  string version = 1;
}

